WindGroup Dev/src/objects/Integration_AWS_Log__c.object
<CustomObject>
    <fields>
        <fullName>Integration_Call_Type__c</fullName>
        <label>Integration Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Push</fullName>
                </value>
                <value>
                    <fullName>Pull</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Json_String1__c</fullName>
        <label>Json String1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Json_String2__c</fullName>
        <label>Json String2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Synch_Datetime_Criteria__c</fullName>
        <label>Last Synch Datetime Criteria</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processed_Records1__c</fullName>
        <label>Processed Records1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processed_Records2__c</fullName>
        <label>Processed Records2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_String__c</fullName>
        <label>Response String</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_URL__c</fullName>
        <label>Target URL</label>
        <type>Url</type>
    </fields>
    <label>Integration AWS Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Integration_Call_Type__c</columns>
        <columns>Last_Synch_Datetime_Criteria__c</columns>
        <columns>Status__c</columns>
        <columns>Response_String__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Push_Errors</fullName>
        <columns>NAME</columns>
        <columns>Integration_Call_Type__c</columns>
        <columns>Last_Synch_Datetime_Criteria__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Exception</value>
        </filters>
        <label>All_Push_Errors</label>
    </listViews>
    <listViews>
        <fullName>All_Push_Logs</fullName>
        <columns>NAME</columns>
        <columns>Integration_Call_Type__c</columns>
        <columns>Last_Synch_Datetime_Criteria__c</columns>
        <columns>Status__c</columns>
        <columns>Response_String__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Call_Type__c</field>
            <operation>equals</operation>
            <value>Push</value>
        </filters>
        <label>All Push Logs</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>Integration AWS Log Seq No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration AWS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>